Личные сообщения - диалог с пользователем.

--- a/app/profile-dialog.html
+++ b/app/profile-dialog.html
@@ -584,61 +584,61 @@
 
                                 <h2>Диалог с другим пользователем</h2>
 
-                                <div class="row">
-                                    <div class="col-md-3">
-                                        <div class="dialogs-users list users-list">
-                                            <div class="item user online">
-                                                <a href="profile.html" class="user-avatar">
-                                                    <img src="/img/uploads/ivan.jpg" alt="" class="avatar mini">
-                                                </a>
-                                                <div class="user">
-                                                    <a href="profile.html" class="login"><span>Ivan</span></a>
-                                                </div>
-                                            </div>
-                                            <div class="item user">
-                                                <a href="profile.html" class="user-avatar">
-                                                    <img src="/img/uploads/avatar-2.jpg" alt="" class="avatar mini">
-                                                </a>
-                                                <div class="user">
-                                                    <a href="profile.html" class="login"><span>SKS</span></a>
-                                                </div>
-                                            </div>
-                                            <div class="item user online">
-                                                <a href="profile.html" class="user-avatar">
-                                                    <img src="/img/uploads/avatar-3.jpg" alt="" class="avatar mini">
-                                                </a>
-                                                <div class="user">
-                                                    <a href="profile.html" class="login"><span>Мастер</span></a>
-                                                </div>
-                                            </div>
-                                            <div class="item user">
-                                                <a href="profile.html" class="user-avatar">
-                                                    <img src="/img/uploads/avatar-1.jpg" alt="" class="avatar mini">
-                                                </a>
-                                                <div class="user">
-                                                    <a href="profile.html" class="login"><span>Anaytisow-aleck1971</span></a>
-                                                </div>
-                                            </div>
-                                            <div class="item user">
-                                                <a href="profile.html" class="user-avatar">
-                                                    <img src="/img/uploads/default-avatar.png" alt="" class="avatar mini">
-                                                </a>
-                                                <div class="user">
-                                                    <a href="profile.html" class="login"><span>Макс</span></a>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="col-md-9">
+                                <!--<div class="row">-->
+                                    <!--<div class="col-md-3">-->
+                                        <!--<div class="dialogs-users list users-list">-->
+                                            <!--<div class="item user online">-->
+                                                <!--<a href="profile.html" class="user-avatar">-->
+                                                    <!--<img src="/img/uploads/ivan.jpg" alt="" class="avatar mini">-->
+                                                <!--</a>-->
+                                                <!--<div class="user">-->
+                                                    <!--<a href="profile.html" class="login"><span>Ivan</span></a>-->
+                                                <!--</div>-->
+                                            <!--</div>-->
+                                            <!--<div class="item user">-->
+                                                <!--<a href="profile.html" class="user-avatar">-->
+                                                    <!--<img src="/img/uploads/avatar-2.jpg" alt="" class="avatar mini">-->
+                                                <!--</a>-->
+                                                <!--<div class="user">-->
+                                                    <!--<a href="profile.html" class="login"><span>SKS</span></a>-->
+                                                <!--</div>-->
+                                            <!--</div>-->
+                                            <!--<div class="item user online">-->
+                                                <!--<a href="profile.html" class="user-avatar">-->
+                                                    <!--<img src="/img/uploads/avatar-3.jpg" alt="" class="avatar mini">-->
+                                                <!--</a>-->
+                                                <!--<div class="user">-->
+                                                    <!--<a href="profile.html" class="login"><span>Мастер</span></a>-->
+                                                <!--</div>-->
+                                            <!--</div>-->
+                                            <!--<div class="item user">-->
+                                                <!--<a href="profile.html" class="user-avatar">-->
+                                                    <!--<img src="/img/uploads/avatar-1.jpg" alt="" class="avatar mini">-->
+                                                <!--</a>-->
+                                                <!--<div class="user">-->
+                                                    <!--<a href="profile.html" class="login"><span>Anaytisow-aleck1971</span></a>-->
+                                                <!--</div>-->
+                                            <!--</div>-->
+                                            <!--<div class="item user">-->
+                                                <!--<a href="profile.html" class="user-avatar">-->
+                                                    <!--<img src="/img/uploads/default-avatar.png" alt="" class="avatar mini">-->
+                                                <!--</a>-->
+                                                <!--<div class="user">-->
+                                                    <!--<a href="profile.html" class="login"><span>Макс</span></a>-->
+                                                <!--</div>-->
+                                            <!--</div>-->
+                                        <!--</div>-->
+                                    <!--</div>-->
+                                    <!--<div class="col-md-9">-->
                                         <div class="dialog blog with-filters">
                                             <div class="filters">
-                                                <div class="user dialog-user-info">
+                                                <div class="dialog-user-info">
                                                     <a href="profile.html" class="user-avatar">
                                                         <img src="/img/uploads/avatar.jpg" alt="" class="avatar mini">
                                                     </a>
                                                     <div class="user">
                                                         <span class="login">Denwebart</span>
-                                                        <span class="fullname">Den Malafey</span>
+                                                        <span class="is-online">Последний раз в сети 15 мин. назад</span>
                                                     </div>
                                                 </div>
                                             </div>
@@ -654,45 +654,60 @@
                                                     <i class="fa fa-refresh"></i>
                                                 </button>
                                             </div>
-                                            <div class="list">
+                                            <div class="messages-container">
                                                 <div class="item message outgoing-message">
                                                     <div class="user">
                                                         <a href="profile.html" class="user-avatar">
-                                                            <img src="/img/uploads/default-avatar.png" alt="" class="avatar mini">
+                                                            <img src="/img/uploads/ivan.jpg" alt="" class="avatar mini">
+                                                        </a>
+                                                    </div>
+                                                    <div class="content">
+                                                        <span class="small-text date">1 ч. назад</span>
+                                                        <span class="text">
+                                                            Привет, Денис!
+                                                        </span>
+                                                        <div class="buttons">
+                                                            <a href="#" class="delete-button">
+                                                                <i class="fa fa-close"></i>
+                                                            </a>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                                <div class="item message outgoing-message">
+                                                    <div class="content">
+                                                        <span class="small-text date">1 ч. назад</span>
+                                                        <span class="text">
+                                                            Как продвигаются работы по сайту?
+                                                        </span>
+                                                        <div class="buttons">
+                                                            <a href="#" class="delete-button">
+                                                                <i class="fa fa-close"></i>
+                                                            </a>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                                <div class="item message incoming-message">
+                                                    <div class="user">
+                                                        <a href="profile.html" class="user-avatar">
+                                                            <img src="/img/uploads/avatar.jpg" alt="" class="avatar mini">
                                                         </a>
                                                     </div>
                                                     <div class="content">
                                                         <span class="small-text date">25 мин. назад</span>
                                                         <span class="text">
-                                                            Пользователю <a href="profile.html">Support</a> понравилась ваша статья.
+                                                            Привет, Вань! Как тебе дизайн личных сообщений? Мы старались :)
                                                         </span>
-                                                    </div>
-                                                    <div class="buttons">
-                                                        <a href="#" class="delete-button">
-                                                            <i class="fa fa-close"></i>
-                                                        </a>
-                                                    </div>
-                                                </div>
-                                                <div class="item message incoming-message">
-                                                    <div class="user">
-                                                        <i class="fa fa-comment success"></i>
-                                                    </div>
-                                                    <div class="content">
-                                                        <span class="small-text date">1 ч. назад</span>
-                                                        <span class="text">
-                                                    Роман (roman@email.com) оставил комментарий к вашей статье.
-                                                </span>
-                                                    </div>
-                                                    <div class="buttons">
-                                                        <a href="#" class="delete-button">
-                                                            <i class="fa fa-close"></i>
-                                                        </a>
+                                                        <div class="buttons">
+                                                            <a href="#" class="delete-button">
+                                                                <i class="fa fa-close"></i>
+                                                            </a>
+                                                        </div>
                                                     </div>
                                                 </div>
                                             </div>
                                         </div>
-                                    </div>
-                                </div>
+                                    <!--</div>-->
+                                <!--</div>-->
                             </section>
                         </div>
                     </div>
