Личные сообщения - диалог с пользователем (slimScroll, форма для ответа).

--- a/app/profile-dialog.html
+++ b/app/profile-dialog.html
@@ -632,6 +632,9 @@
                                     <!--<div class="col-md-9">-->
                                         <div class="dialog blog with-filters">
                                             <div class="filters">
+                                                <a href="profile-messages.html" class="back">
+                                                    <i class="fa fa-angle-left"></i>
+                                                </a>
                                                 <div class="dialog-user-info">
                                                     <a href="profile.html" class="user-avatar">
                                                         <img src="/img/uploads/avatar.jpg" alt="" class="avatar mini">
@@ -654,7 +657,7 @@
                                                     <i class="fa fa-refresh"></i>
                                                 </button>
                                             </div>
-                                            <div class="messages-container">
+                                            <div class="list messages-container scroll">
                                                 <div class="item message outgoing-message">
                                                     <div class="user">
                                                         <a href="profile.html" class="user-avatar">
@@ -672,10 +675,42 @@
                                                             </a>
                                                         </div>
                                                     </div>
-                                                </div>
-                                                <div class="item message outgoing-message">
                                                     <div class="content">
                                                         <span class="small-text date">1 ч. назад</span>
+                                                        <span class="text">
+                                                            Всем хорош автомобиль Порше,
+                                                            но при ударе колесом о бордюр
+                                                            (даже на маленькой скорости) подвеска
+                                                            пробивает облегчённый алюминиевый кузов авто.
+                                                            Цена ремонта в ЕС у официальных дилеров
+                                                            - до 20 тысяч евро.
+                                                        </span>
+                                                        <div class="buttons">
+                                                            <a href="#" class="delete-button">
+                                                                <i class="fa fa-close"></i>
+                                                            </a>
+                                                        </div>
+                                                    </div>
+                                                    <div class="content">
+                                                        <span class="small-text date">1 ч. назад</span>
+                                                        <span class="text">
+                                                            Вот так вот.
+                                                        </span>
+                                                        <div class="buttons">
+                                                            <a href="#" class="delete-button">
+                                                                <i class="fa fa-close"></i>
+                                                            </a>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                                <div class="item message outgoing-message">
+                                                    <div class="user">
+                                                        <a href="profile.html" class="user-avatar">
+                                                            <img src="/img/uploads/ivan.jpg" alt="" class="avatar mini">
+                                                        </a>
+                                                    </div>
+                                                    <div class="content">
+                                                        <span class="small-text date">45 мин. назад</span>
                                                         <span class="text">
                                                             Как продвигаются работы по сайту?
                                                         </span>
@@ -695,7 +730,20 @@
                                                     <div class="content">
                                                         <span class="small-text date">25 мин. назад</span>
                                                         <span class="text">
-                                                            Привет, Вань! Как тебе дизайн личных сообщений? Мы старались :)
+                                                            Привет, Вань! Работа продвигается, стараемся быстрее закончить.
+                                                            <br>
+                                                            Долго потому, что стараемся сделать идеально.
+                                                        </span>
+                                                        <div class="buttons">
+                                                            <a href="#" class="delete-button">
+                                                                <i class="fa fa-close"></i>
+                                                            </a>
+                                                        </div>
+                                                    </div>
+                                                    <div class="content">
+                                                        <span class="small-text date">25 мин. назад</span>
+                                                        <span class="text">
+                                                            Как тебе дизайн личных сообщений? Мы старались :)
                                                         </span>
                                                         <div class="buttons">
                                                             <a href="#" class="delete-button">
@@ -704,7 +752,53 @@
                                                         </div>
                                                     </div>
                                                 </div>
+                                                <div class="item message outgoing-message">
+                                                    <div class="user">
+                                                        <a href="profile.html" class="user-avatar">
+                                                            <img src="/img/uploads/ivan.jpg" alt="" class="avatar mini">
+                                                        </a>
+                                                    </div>
+                                                    <div class="content">
+                                                        <span class="small-text date">45 мин. назад</span>
+                                                        <span class="text">
+                                                            Отлично!
+                                                        </span>
+                                                        <div class="buttons">
+                                                            <a href="#" class="delete-button">
+                                                                <i class="fa fa-close"></i>
+                                                            </a>
+                                                        </div>
+                                                    </div>
+                                                    <div class="content">
+                                                        <span class="small-text date">45 мин. назад</span>
+                                                        <span class="text">
+                                                            Смотри, какую машину я купил
+                                                        </span>
+                                                        <div class="attachments">
+                                                            <img src="/img/uploads/car-2.jpg" alt="">
+                                                        </div>
+                                                        <div class="buttons">
+                                                            <a href="#" class="delete-button">
+                                                                <i class="fa fa-close"></i>
+                                                            </a>
+                                                        </div>
+                                                    </div>
+                                                </div>
                                             </div>
+                                            <form action="#" id="message-form">
+                                                <div class="textarea" contenteditable="true" placeholder="Напишите сообщение..."></div>
+                                                <div class="buttons">
+                                                    <button>
+                                                        <i class="fa fa-smile-o"></i>
+                                                    </button>
+                                                    <button>
+                                                        <i class="fa fa-paperclip"></i>
+                                                    </button>
+                                                </div>
+                                                <button class="send-message" type="button">
+                                                    <i class="fa fa-paper-plane"></i>
+                                                </button>
+                                            </form>
                                         </div>
                                     <!--</div>-->
                                 <!--</div>-->
