--- a/app/profile.html
+++ b/app/profile.html
@@ -831,6 +831,45 @@
                             <!--<a href="#">Как заработать рейтинг и получить баллы?</a>-->
                         <!--</div>-->
                     <!--</div>-->
+                    <div class="widget widget-users">
+                        <div class="widget-title">
+                            <h4 class="title">Друзья</h4>
+                        </div>
+                        <div class="itms horisontal">
+                            <div class="item user">
+                                <a href="profile.html" class="user-avatar">
+                                    <img src="/img/uploads/ivan.jpg" alt="" class="avatar mini">
+                                </a>
+                                <div class="user">
+                                    <a href="profile.html" class="login"><span>Ivan</span></a>
+                                </div>
+                            </div>
+                            <div class="item user">
+                                <a href="profile.html" class="user-avatar">
+                                    <img src="/img/uploads/avatar-3.jpg" alt="" class="avatar mini">
+                                </a>
+                                <div class="user">
+                                    <a href="profile.html" class="login"><span>Мастер</span></a>
+                                </div>
+                            </div>
+                            <div class="item user">
+                                <a href="profile.html" class="user-avatar">
+                                    <img src="/img/uploads/avatar-1.jpg" alt="" class="avatar mini">
+                                </a>
+                                <div class="user">
+                                    <a href="profile.html" class="login"><span>Muph1984</span></a>
+                                </div>
+                            </div>
+                            <div class="item user">
+                                <a href="profile.html" class="user-avatar">
+                                    <img src="/img/uploads/default-avatar.png" alt="" class="avatar mini">
+                                </a>
+                                <div class="user">
+                                    <a href="profile.html" class="login"><span>Макс</span></a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
