--- a/app/profile.html
+++ b/app/profile.html
@@ -831,42 +831,81 @@
                             <!--<a href="#">Как заработать рейтинг и получить баллы?</a>-->
                         <!--</div>-->
                     <!--</div>-->
-                    <div class="widget widget-users">
+                    <div class="widget widget-users white-section">
                         <div class="widget-title">
                             <h4 class="title">Друзья</h4>
                         </div>
-                        <div class="itms horisontal">
+                        <div class="items horisontal">
                             <div class="item user">
-                                <a href="profile.html" class="user-avatar">
+                                <a href="profile.html" class="user-avatar" title="Ivan">
                                     <img src="/img/uploads/ivan.jpg" alt="" class="avatar mini">
                                 </a>
-                                <div class="user">
-                                    <a href="profile.html" class="login"><span>Ivan</span></a>
-                                </div>
                             </div>
                             <div class="item user">
-                                <a href="profile.html" class="user-avatar">
+                                <a href="profile.html" class="user-avatar" title="Мастер">
                                     <img src="/img/uploads/avatar-3.jpg" alt="" class="avatar mini">
                                 </a>
-                                <div class="user">
-                                    <a href="profile.html" class="login"><span>Мастер</span></a>
-                                </div>
                             </div>
                             <div class="item user">
-                                <a href="profile.html" class="user-avatar">
+                                <a href="profile.html" class="user-avatar" title="Muph1984">
                                     <img src="/img/uploads/avatar-1.jpg" alt="" class="avatar mini">
                                 </a>
-                                <div class="user">
-                                    <a href="profile.html" class="login"><span>Muph1984</span></a>
-                                </div>
                             </div>
                             <div class="item user">
-                                <a href="profile.html" class="user-avatar">
+                                <a href="profile.html" class="user-avatar" title="Макс">
                                     <img src="/img/uploads/default-avatar.png" alt="" class="avatar mini">
                                 </a>
-                                <div class="user">
-                                    <a href="profile.html" class="login"><span>Макс</span></a>
-                                </div>
+                            </div>
+                            <div class="item user">
+                                <a href="profile.html" class="user-avatar" title="Ivan">
+                                    <img src="/img/uploads/ivan.jpg" alt="" class="avatar mini">
+                                </a>
+                            </div>
+                            <div class="item user">
+                                <a href="profile.html" class="user-avatar" title="Мастер">
+                                    <img src="/img/uploads/avatar-3.jpg" alt="" class="avatar mini">
+                                </a>
+                            </div>
+                            <div class="item user">
+                                <a href="profile.html" class="user-avatar" title="Muph1984">
+                                    <img src="/img/uploads/avatar-1.jpg" alt="" class="avatar mini">
+                                </a>
+                            </div>
+                            <div class="item user">
+                                <a href="profile.html" class="user-avatar" title="Макс">
+                                    <img src="/img/uploads/default-avatar.png" alt="" class="avatar mini">
+                                </a>
+                            </div>
+                            <div class="item user">
+                                <a href="profile.html" class="user-avatar" title="Ivan">
+                                    <img src="/img/uploads/ivan.jpg" alt="" class="avatar mini">
+                                </a>
+                            </div>
+                            <div class="item user">
+                                <a href="profile.html" class="user-avatar" title="Мастер">
+                                    <img src="/img/uploads/avatar-3.jpg" alt="" class="avatar mini">
+                                </a>
+                            </div>
+                            <div class="item user">
+                                <a href="profile.html" class="user-avatar" title="Muph1984">
+                                    <img src="/img/uploads/avatar-1.jpg" alt="" class="avatar mini">
+                                </a>
+                            </div>
+                            <div class="item user">
+                                <a href="profile.html" class="user-avatar" title="Макс">
+                                    <img src="/img/uploads/default-avatar.png" alt="" class="avatar mini">
+                                </a>
+                            </div>
+                        </div>
+                        <hr>
+                        <div class="widget-title">
+                            <h4 class="title">Друзья онлайн</h4>
+                        </div>
+                        <div class="items horisontal">
+                            <div class="item user">
+                                <a href="profile.html" class="user-avatar" title="Denwebart">
+                                    <img src="/img/uploads/avatar.jpg" alt="" class="avatar mini">
+                                </a>
                             </div>
                         </div>
                     </div>
